2.1.0 (TBD)

Added:
- The subscription_request.build_request function has a new option to clip to
  the subscription's source geometry. This is a preview of the default
  behavior of the next version of the Subscriptions API.

2.0.3 (2023-06-28)

Changed:
- Orders CLI now forces STAC to false for GEE deliveries. This is due to the
  Orders API change to surface validation errors when stac is specified for GEE
  orders.(#957)


2.0.2 (2023-05-24)

Fixed:
- Fixed bug where SkySatVideo was not recognized as a valid data api item type.
- Fixed wheel name to indicate that only python 3 is supported and updated
  build metadata to indicate that the package is now a stable release and only
  supports Python 3.


2.0.1 (2023-05-10)

Fixed:
- Fix security issue where secret file was being created with read access other
  users on the machine. Automatically fixes the file permissions to only read
  and write the first time the file is accessed and continues to enforce the
  proper file permissions going forward.

Docs:
- Fixed broken links on "CLI for Data API Tutorial" page (#952).
- Protect against injecting javascript:URI into edited href tags in docs (#934).
- Remove --pre --user from pip install instructions (#948).
- Update the syntax of example code in the docstrings in the Order and Data
  clients and add example code to the Subscriptions client docstring (#943).


2.0.0 (2023-04-17)

User Interface Changes:
- Match search-create and search-update name/filter options/parameters in Data
  API and CLI to match to search UI (#883, #898, #909).
- Change Subscriptions CLI function naming from describe to get to match other
  clients (#900).
- Removed (unused) checksum argument from download_order (#896).
- Move planet data stats CLI interval and filter args to required options
  (#894).

Changed:
- Data and Subscriptions API and CLI now normalize and validate item type and
  asset type (#902, #905).